syntax = "proto3";

package tokens;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/sirjager/rpcs/tokens";

message TokensPayloadData {
    string data = 1;
}

message TokensPayload {
    string id = 1;
    google.protobuf.Timestamp iat = 2;
    google.protobuf.Timestamp expires = 3;
    TokensPayloadData payload = 4;
}
